--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.logo_font {
+  font-family: "Baskervville SC", serif;
+  font-weight: 900;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -16,4 +27,8 @@ input::-webkit-inner-spin-button {
   bottom: 25px;
   right: 25px;
   z-index: 1000;
+}
+
+.nav_main {
+  z-index: 999;
 }
